--- a/css/main.css
+++ b/css/main.css
@@ -9,18 +9,49 @@
     --dark-grayish-blue: hsl(234, 11%, 52%);
     --very-dark-grayish-blue: hsl(233, 14%, 35%);
     --very-dark-grayish-blue-two: hsl(237, 14%, 26%);
-
-
 }
 
 body {
+    height: 100vh;
+}
+
+h1 {
+    letter-spacing: 1rem;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    padding: 0;
+    align-self: center;
+}
+
+input {
+    color: white;
+    /* background-color: inherit;
+    padding: 1.2rem 0;
+    padding-left: 1rem;
+    border-style: none; */
+}
+
+/* input::before {
+
+} */
+
+.dark-theme {
     background: rgb(24, 23, 23) url("/images/bg-desktop-dark.jpg") no-repeat center top;
-    background-size: cover;
+    background-size: 100%;
+}
+
+.light-theme {
+    background: white url("/images/bg-desktop-light.jpg") no-repeat center top;
+    background-size: 100%;
 }
 
 .container {
     margin: 0 auto;
-    width: 30%;
+    width: 35%;
     color: white;
 }
 
@@ -29,25 +60,63 @@ body {
     flex-direction: row;
     text-align: center;
     justify-content: space-between;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
 .head > img {
     align-self: center;
 }
 
-.toadd {
+.bg-color-dark {
     background-color: var(--very-dark-desaturated-blue);
+    color: white;
+    border-bottom-color: white;
 }
 
-input {
-    background-color: inherit;
-    padding: 15px;
+.bg-color-light {
+    background-color: white;
+    color: var(--very-dark-desaturated-blue);
+    border-bottom-color: var(--very-dark-blue);
+}
+
+.checkbox-container {
+    padding: 1rem;
+    display: inline;
+}
+
+
+
+.list-container {
+    margin: 2rem auto;
+    
+}
+
+.b-d-none {
+    border: none;
+}
+
+.border-bottom {
+    border-bottom-style: solid;
+    border-width: 1px;
 }
 
 #addTodo {
-    width: 90%;
+    width: 100%;
 }
 
-h1 {
-    letter-spacing: 1rem;
+.task-input {
+    background-color: inherit;
+    padding: 1.2rem 0;
+    padding-left: 1rem;
+    width: 100%;
+}
+
+#theme-changer-dark {
+    display: none;
+
+}
+
+.checked-tasks {
+    text-decoration: line-through;
 }
